# CC-Web-MCP

./: README.md  config.json  pyproject.toml  requirements.txt  server.py  web.py
docs/: capabilities.md  configuration.md  installation.md  roadmap.md  routing-and-permissions.md  security.md
hooks/: guard.py
scripts/: install_hook.py
src/cc_web_mcp/: doctor.py  install.py  web.py
src/cc_web_mcp/data/: default_config.json
tests/: test_config.py  test_doctor.py  test_guard.py  test_init.py  test_install_hook.py  test_package_metadata.py  test_server_status.py  test_web.py
